--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     />
   </head>
   <body>
-    <div class="background one"></div>
+    <!-- <div class="background one"></div>
     <div class="background two"></div>
-    <div class="background three"></div>
+    <div class="background three"></div> -->
 
     <header id="header">
       <nav id="nav" class="container">
         <div class="logo">
-          <a href="#">OCP</a>
+          <a href="#">O<span class="qg mark">C</span>P</a>
         </div>
 
         <div class="nav-links">
@@ -30,6 +30,15 @@
         </div>
 
         <div class="nav-btn-container">
+          <a href="#" class="theme">
+            <img src="assets/icons/light.png" alt="Light Mode Icon" />
+            <img
+              src="assets/icons/dark.png"
+              alt="Dark Mode Icon"
+              style="display: none"
+            />
+          </a>
+
           <a href="#" class="nav-btn"> Let's Talk </a>
         </div>
       </nav>
@@ -38,15 +47,16 @@
     <!-- Hero Section -->
     <div class="hero container">
       <div class="hero-content">
-        <h1 class="hero-headline chillax">
-          Hi, I’m <span style="color: #737bff;">Orin</span> — I Build Digital Experiences
+        <h1 class="hero-headline">
+          Hi, I’m <span class="mark">Orin</span> — I Build Digital
+          Experiences.
         </h1>
-        <p class="hero-tagline chillax">
+        <p class="hero-tagline">
           Full-stack developer crafting clean, scalable solutions.
         </p>
         <div class="hero-buttons">
-          <a href="#projects" class="btn-primary chillax">View My Work</a>
-          <a href="#contact" class="btn-secondary chillax">Let’s Connect</a>
+          <a href="#projects" class="btn-primary">View My Work</a>
+          <a href="#contact" class="btn-secondary">Let’s Connect</a>
         </div>
       </div>
     </div>
