--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     />
   </head>
   <body>
-    <!-- <div class="background one"></div>
-    <div class="background two"></div>
-    <div class="background three"></div> -->
 
     <header id="header">
       <nav id="nav" class="container">
@@ -22,14 +19,6 @@
         </div>
 
         <div class="nav-links">
-          <a href="#" class="active">Home</a>
-          <a href="#">About</a>
-          <a href="#">Projects</a>
-          <a href="#">Skill</a>
-          <a href="#">Contact</a>
-        </div>
-
-        <div class="nav-btn-container">
           <a href="#" class="theme">
             <img src="assets/icons/light.png" alt="Light Mode Icon" />
             <img
@@ -38,6 +27,22 @@
               style="display: none"
             />
           </a>
+          <a href="#" class="active">Home</a>
+          <a href="#">About</a>
+          <a href="#">Projects</a>
+          <a href="#">Skill</a>
+          <a href="#">Contact</a>
+        </div>
+
+        <div class="nav-btn-container">
+          <!-- <a href="#" class="theme">
+            <img src="assets/icons/light.png" alt="Light Mode Icon" />
+            <img
+              src="assets/icons/dark.png"
+              alt="Dark Mode Icon"
+              style="display: none"
+            />
+          </a> -->
 
           <a href="#" class="nav-btn"> Let's Talk </a>
         </div>
@@ -60,6 +65,8 @@
         </div>
       </div>
     </div>
+
+    <section style="height: 500vh;"></section>
 
     <script src="js/script.js"></script>
   </body>
